syntax = "proto3";

import "google/protobuf/any.proto";

package BaseProto;

message MessageWrapper {
	string type = 1;
	bytes content = 2;
}